remove use of Paths.get()